tests/smoke/snapshots/smoke__help_messages__auth_help.snap
---
source: tests/smoke/help_messages.rs
assertion_line: 27
expression: result.stdout
---
Authentication management (set-token, status)

Usage: shrug.exe auth [OPTIONS] <COMMAND>

Commands:
  set-token  Store an API token for a profile
  status     Show credential status for a profile
  login      Authorize an OAuth 2.0 profile via browser flow
  setup      Interactive setup wizard for first-time configuration
  help       Print this message or the help of the given subcommand(s)

Options:
  -o, --output <OUTPUT>      Output format [default: table] [possible values: json, table, csv]
      --color <COLOR>        Color output [default: auto] [possible values: auto, always, never]
  -p, --profile <PROFILE>    Configuration profile to use
  -v, --verbose...           Increase verbosity (-v, -vv, -vvv for trace)
  -n, --dry-run              Dry run — show what would happen without making changes
  -L, --limit <LIMIT>        Maximum number of results to fetch (implies pagination)
      --pager                Pipe output through a pager (e.g., less)
  -q, --quiet                Suppress non-essential output
      --jql <JQL>            Raw JQL query string (Jira/Jira Software only)
      --project <PROJECT>    JQL shorthand: filter by project key
      --assignee <ASSIGNEE>  JQL shorthand: filter by assignee ("me" for current user)
      --status <STATUS>      JQL shorthand: filter by status
      --type <TYPE>          JQL shorthand: filter by issue type
      --priority <PRIORITY>  JQL shorthand: filter by priority
      --label <LABEL>        JQL shorthand: filter by label
  -h, --help                 Print help
