tests/smoke/snapshots/smoke__help_messages__cache_help.snap
---
source: tests/smoke/help_messages.rs
assertion_line: 47
expression: result.stdout
---
Cache management (refresh specs)

Usage: shrug.exe cache [OPTIONS] <COMMAND>

Commands:
  refresh  Download/refresh API specs from Atlassian CDN
  help     Print this message or the help of the given subcommand(s)

Options:
      --output <OUTPUT>          Output format [default: table] [possible values: json, table, yaml, csv, plain]
      --color <COLOR>            Color output [default: auto] [possible values: auto, always, never]
      --profile <PROFILE>        Configuration profile to use
  -v, --verbose...               Increase verbosity (-v, -vv, -vvv)
      --dry-run                  Dry run — show what would happen without making changes
      --json <JSON>              JSON request body for operations that require one
      --page-all                 Fetch all pages of paginated results
      --limit <LIMIT>            Maximum number of results to fetch (used with --page-all)
      --fields <FIELDS>          Select specific fields for table/CSV output (comma-separated)
      --pager                    Pipe output through a pager (e.g., less)
      --trace                    Enable trace-level logging (full diagnostic output)
      --markdown                 Convert Markdown fields in --json body to ADF before sending
      --jql <JQL>                Raw JQL query string (Jira/Jira Software only)
      --project <PROJECT>        JQL shorthand: filter by project key
      --assignee <ASSIGNEE>      JQL shorthand: filter by assignee ("me" for current user)
      --status <STATUS>          JQL shorthand: filter by status
      --issue-type <ISSUE_TYPE>  JQL shorthand: filter by issue type
      --priority <PRIORITY>      JQL shorthand: filter by priority
      --label <LABEL>            JQL shorthand: filter by label
  -h, --help                     Print help
