tests/smoke/snapshots/smoke__help_messages__profile_help.snap
---
source: tests/smoke/help_messages.rs
expression: result.stdout
---
Profile management (create, list, get, delete)

Usage: shrug.exe profile [OPTIONS] <COMMAND>

Commands:
  create  Create a new profile
  list    List all profiles
  view    Show details of a profile
  use     Set a profile as the default
  update  Update an existing profile
  delete  Delete a profile
  help    Print this message or the help of the given subcommand(s)

Options:
  -o, --output <OUTPUT>    Output format [default: table] [possible values: json, table, csv]
      --color <COLOR>      Color output [default: auto] [possible values: auto, always, never]
  -p, --profile <PROFILE>  Configuration profile to use
  -v, --verbose...         Increase verbosity (-v, -vv, -vvv for trace)
  -n, --dry-run            Dry run — show what would happen without making changes
  -L, --limit <LIMIT>      Maximum number of results to fetch (implies pagination)
  -q, --quiet              Suppress non-essential output
  -h, --help               Print help
