tests/smoke/snapshots/smoke__help_messages__toplevel_help.snap
---
source: tests/smoke/help_messages.rs
assertion_line: 17
expression: result.stdout
---
A static CLI for Atlassian Cloud

Usage: shrug.exe [OPTIONS] [COMMAND]

Commands:
  jira           Jira Cloud operations [aliases: j]
  jira-software  Jira Software operations (boards, sprints) [aliases: jsw]
  confluence     Confluence operations [aliases: c, conf]
  auth           Authentication management (set-token, status)
  profile        Profile management (create, list, get, delete)
  cache          Cache management (refresh specs)
  help           Print this message or the help of the given subcommand(s)

Options:
  -o, --output <OUTPUT>    Output format [default: table] [possible values: json, table, csv]
      --color <COLOR>      Color output [default: auto] [possible values: auto, always, never]
  -p, --profile <PROFILE>  Configuration profile to use
  -v, --verbose...         Increase verbosity (-v, -vv, -vvv for trace)
  -n, --dry-run            Dry run — show what would happen without making changes
  -L, --limit <LIMIT>      Maximum number of results to fetch (implies pagination)
  -q, --quiet              Suppress non-essential output
  -h, --help               Print help
  -V, --version            Print version
